fix overview tabs overflow

--- a/src/components/Pokemon/views/Tabs.module.css
+++ b/src/components/Pokemon/views/Tabs.module.css
@@ -5,6 +5,7 @@
   justify-content: space-around;
   align-items: center;
   color: rgb(0, 0, 0, 0.7);
+  gap: 0.5rem;
 }
 
 .tab {
